@@ -29,7 +29,6 @@
 
 
 #include <libgnomeui/gnome-uidefs.h>
-#include <libgnomeui/gnome-about.h>
 #include <libgnomecanvas/gnome-canvas.h>
 #include <libgnomecanvas/gnome-canvas-pixbuf.h>
 #include <libgnomecanvas/gnome-canvas-line.h>
